# mini-crt

./: .gitignore  CMakeLists.txt  README.md
include/: minicrt.h  stdint.h
src/: entry.c  main.c  malloc.c  printf.c  stdio.c  string.c
src/arch/aarch64/: start.s
